# TDMS

./: .gitignore  ADD_TEST_USERS_GUIDE.md  ARCHITECTURE.md  DEPLOYMENT.md  DESKTOP_AUTH_FIXES.md  Dockerfile  GOOGLE_AUTH_SETUP.md  README.md  SECRETS_GUIDE.md  SETUP_GUIDE.md  SYNC_TEST_PLAN.md  TDMS-Desktop.bat  TEST_RESULTS.md  build_desktop.bat  database.json  default.json  desktop.bat  docker-compose.yml  pyproject.toml  requirements.txt  run_desktop_debug.bat  run_server.bat  run_server.py  setup_desktop.py  setup_env.bat  setup_environment.bat  test_desktop_auth.py  test_desktop_oauth.bat  test_page.html  tmp_index.html  unit_test.bat  web.bat
UML/: 01_use_case.puml  02_class_core.puml  03_vopc_union.puml  04_activity.puml  05_sequence_drive.puml  05_sequence_insert.puml  06_sequence_google.puml  06_sequence_union.puml  07_state.puml  08_component.puml  09_deployment.puml  10_class_full_system.puml  10_sequence_union.puml  README.md  generate_diagrams.bat  generate_diagrams.sh  generate_simple.sh  generate_with_python.py
databases/: 123.json  12312.json  12312234.json  123123.json  123123123.json  12312322.json  DB1.json  db1.json  db123.json  db2.json  default.json  dsfsdsdfs.json  empty_db.json  fghhj (1).json  fghhj.json  imported.json  new (1).json  new_name.json  old_name.json  test_db.json  workflow_test.json
docs/: report.md
scripts/: clean_redis.py  exercise_desktop_api.py  exercise_union_columns.py  exercise_union_same.py  exercise_web.py  exercise_web_full.py
tests/: test_core.py  test_desktop_api.py  test_desktop_app.py  test_desktop_features.py  (+1 more)
(+44 files in other folders)
